src/test/deca/context/valid/self/extends.deca
class A{
    int x;

    void double(){
        this.x = 2 * this.x;
    }

}

class B extends A{
    int y;

    void add(){
        this.y = this.y + this.x;
    }
}