src/test/deca/context/invalid/self/paramType.deca
class A{
    void method(int a) {}
}

{
    A a = new A();
    a.method(true);
}